gccida/g0/estimate_probability
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:810:14: error: expected identifier or '('
 struct loop = &loops_info->array[i]; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:823:40: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_edge_def( e, PRED_LOOP_BRANCH, TAKEN_0); 
                                       ^~~~~~~
                                       TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:856:39: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0, PRED_NORETURN, NOT_TAKEN_0); 
                                      ^~~~~~~~~~~
                                      NOT_TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:869:43: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0, PRED_ERROR_RETURN, NOT_TAKEN_0); 
                                          ^~~~~~~~~~~
                                          NOT_TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:880:35: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_edge_def( e_0, PRED_CALL, NOT_TAKEN_0); 
                                  ^~~~~~~~~~~
                                  NOT_TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:895:44: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_insn_def( last_insn, PRED_POINTER, NOT_TAKEN_0); 
                                           ^~~~~~~~~~~
                                           NOT_TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:899:44: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_insn_def( last_insn, PRED_POINTER, TAKEN_0); 
                                           ^~~~~~~
                                           TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:907:52: error: use of undeclared identifier 'prediction'; did you mean 'predict_insn'?
predict_insn_def( last_insn, PRED_UNCONDITIONAL, ( prediction)( cond != const_int_rtx[64])); 
                                                   ^~~~~~~~~~
                                                   predict_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:95:1: note: 'predict_insn' declared here
predict_insn (insn, predictor, probability)
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:907:50: error: passing 'void' to parameter of incompatible type 'unsigned int'
predict_insn_def( last_insn, PRED_UNCONDITIONAL, ( prediction)( cond != const_int_rtx[64])); 
                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:911:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:912:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:913:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:914:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)cond[1] != const_int_rtx[64] 
         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:917:52: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_insn_def( last_insn, PRED_OPCODE_NONEQUAL, TAKEN_0); 
                                                   ^~~~~~~
                                                   TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:922:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:923:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:924:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( cond->fld[0].rtwint + 2)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:925:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)cond[1] != const_int_rtx[64] 
         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.c:928:52: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_insn_def( last_insn, PRED_OPCODE_NONEQUAL, NOT_TAKEN_0); 
                                                   ^~~~~~~~~~~
                                                   NOT_TAKEN
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/estimate_probability/src/obj/predict.o] Error 1
